[package]
name = "mikhali"
version = "0.1.0"
edition = "2021"

[dependencies]
tiberius = "0.12.3"
futures-util = "0.3.31"
tokio-util = { version = "0.7.12", features = ["compat"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros"] }
clap = { version = "4.5.21", features = ["derive"] }
